# epydemix-webapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: populations.py  presets.py  simulations.py
app/api/v1/schemas/: common.py  population.py  simulation.py
app/services/: population_service.py  results_processing.py  simulation_service.py
app/utils/: column_utils.py
tests/: conftest.py  test_health.py  test_populations.py  test_presets.py  test_simulations.py
